--- a/src/UberFrba/UberFrba.csproj
+++ b/src/UberFrba/UberFrba.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -145,6 +146,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Capa DAO\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\backgroundDefault.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\damask_background-wallpaper-960x600.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\damask_background-wallpaper-1280x800.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
