--- a/src/UberFrba/App.config
+++ b/src/UberFrba/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <add name="GD1C2017" connectionString="Data Source=(LOCAL)\SQLSERVER2012;Initial Catalog=GD1C2017;User ID=gd; Password=gd2017"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="fechaSistema" value="31/12/2017 14:20:13"/>
+  </appSettings>
 </configuration>
