--- a/src/UberFrba/App.config
+++ b/src/UberFrba/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <add name="GD1C2017" connectionString="Data Source=(LOCAL)\SQLSERVER2012;Initial Catalog=GD1C2017;User ID=gd; Password=gd2017"/>
+    <add name="GD20171C" connectionString="Data Source=(LOCAL)\GDD2017;Initial Catalog=GD20171C;User ID=gd; Password=gd2017"/>
   </connectionStrings>
   <appSettings>
     <add key="fechaSistema" value="31/12/2017 14:20:13"/>
