--- a/src/UberFrba/App.config
+++ b/src/UberFrba/App.config
@@ -1,12 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <add name="GD20171C" connectionString="Data Source=(LOCAL)\GDD2017;Initial Catalog=GD20171C;User ID=gd; Password=gd2017"/>
+    <add name="GD1C2017" connectionString="Data Source=localhost\SQLSERVER2012;Initial Catalog=GD1C2017;User ID=gd; Password=gd2017"/>
   </connectionStrings>
   <appSettings>
     <add key="fechaSistema" value="31/12/2017 14:20:13"/>
   </appSettings>
 </configuration>
+
+
