ABM Cliente y Chofer Funcionando Baja Y Modificacion De Roles

--- a/src/UberFrba/UberFrba.csproj
+++ b/src/UberFrba/UberFrba.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Model\Globals.cs" />
     <Compile Include="Model\Persona.cs" />
     <Compile Include="Model\Rol.cs" />
+    <Compile Include="Model\RolUsuario.cs" />
     <Compile Include="Model\Usuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
