--- a/src/UberFrba/UberFrba.csproj
+++ b/src/UberFrba/UberFrba.csproj
@@ -203,9 +203,11 @@
     </Compile>
     <EmbeddedResource Include="Abm Automovil\BajaAutomovil.resx">
       <DependentUpon>BajaAutomovil.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Abm Automovil\AltaAutomovil.resx">
       <DependentUpon>AltaAutomovil.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Abm Automovil\ModificacionAutomovil.resx">
       <DependentUpon>ModificacionAutomovil.cs</DependentUpon>
