Cambios en los fondos de la app

--- a/src/UberFrba/UberFrba.csproj
+++ b/src/UberFrba/UberFrba.csproj
@@ -370,6 +370,18 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background-1574176_1920.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Fondo azul oscuro.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HD-Wallpapers-022.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mario.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
